--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,7 +1,27 @@
 /* `sm` applies to x-small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) { 
-
-
+    .introduction__content {
+        padding: 0 18px;
+    }
+    .introduction__thumbnail-main{
+        padding-bottom: 20px;
+    }
+    .introduction__thumbnail-main img {
+        width: 250.86px;
+        height: 295.608px;
+    }
+    .introduction__thumbnail-sub img {
+        width: 54.24px;
+        height: 56.274px;
+    }
+    .introduction__thumbnail__price {
+        width: 85.428px;
+        height: 36.612px;
+        font-size: 1.6272rem;
+    }
+    .introduction__thumbnail {
+        padding-top: 50px;
+    }
 }
 
 /* `md` applies to small devices (landscape phones, less than 768px) */
@@ -15,7 +35,7 @@
     }
 
     .header-navbar {
-        padding: 20px 10.5px 0;
+        padding: 20px 10.5px 10px;
     }
 
     .navbar-item__mobile {
@@ -24,7 +44,6 @@
     }
 
     .navbar-mobile {
-        margin-top: 75px;
         background-color: #111114;
     }
 
@@ -39,17 +58,22 @@
     .navbar-item__mobile:hover {
         background-color: #ccc;
     }
+    
+    .banner {
+        flex-direction: column;
+        gap: 36px;
+    }
 }
 
 /* `lg` applies to medium devices (tablets, less than 992px) */
 @media (max-width: 991.98px) { 
-
-
+    .introduction__thumbnail {
+        justify-content: center;
+    }
 }
 
 /* `xl` applies to large devices (desktops, less than 1200px) */
 @media (max-width: 1199.98px) {
-    
 }
 
 /* `xxl` applies to x-large devices (large desktops, less than 1400px) */
