--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,4 +71,138 @@ header {
     display: block;
 }
 
+/* introduction */
+main {
+    padding-top: 85px;
+}
+
+.introduction {
+    padding: 26px 0 50px;
+    background-color: #111114;
+}
+
+.introduction__content-intro {
+    margin-top: 54px;
+    line-height: 1.625;
+    color: rgba(255, 255, 255, 0.80);
+}
+
+.introduction__content__title {
+    margin-top: 10px;
+    font-size: 6.4rem;
+    line-height: 1.15625;
+    text-transform: capitalize;
+    color: #fff;
+}
+
+.introduction__content__desc {
+    margin-top: 20px;
+    line-height: 1.625;
+    color: rgba(255, 255, 255, 0.80);
+}
+
+.introduction__content__link {
+    display: inline-block;
+    margin-top: 40px;
+    padding-bottom: 5px;
+    text-decoration: none;
+    margin-top: 40px;
+    line-height: 1.625;
+    color: #FB8F2C;
+    border-bottom: 1px solid #FB8F2C;
+}
+
+.introduction__thumbnail {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.introduction__thumbnail-main {
+    position: relative;
+}
+
+.introduction__thumbnail__price {
+    position: absolute;
+    left: -15px;
+    bottom: 70px;
+    font-family: 'Libre Bodoni', serif;
+    font-size: 2.4rem;
+    font-weight: 500;
+    text-transform: capitalize;
+    display: inline-flex;
+    padding: 12px 16px 8px;
+    justify-content: center;
+    align-items: center;
+    background-color: #FB8F2C;
+    text-decoration: none;
+    line-height: 1.41667; 
+    color: #fff;
+}
+
+.introduction__thumbnail-main img {
+    max-width: 370px;
+    object-fit: cover;
+}
+
+.introduction__thumbnail-sub img {
+    width: 80px;
+    height: 83px;
+    object-fit: cover;
+}
+
+.introduction__thumbnail-sub {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 30px;
+    width: 99px;
+}
+
+.introduction__thumbnail-sub img:nth-child(odd){
+    align-self: flex-start;
+}
+
+.introduction__thumbnail-sub img:nth-child(2){
+    align-self: flex-end;
+}
+
+/* Banner */
+.banner {
+    backdrop-filter: blur(2.5px);
+    /* padding: 133px 0 63px; */
+    background-image: url(../img/home/Rectangle26.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 63px 0;
+}
+
+.banner__item {
+    text-align: center;
+    color: #fff;
+    font-weight: 500;
+    text-transform: capitalize;
+    font-family: 'Libre Bodoni', serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.banner__item-number {
+    font-size: 6.4rem;
+    line-height: 1.15625;
+}
+
+.banner__item-content {
+    width: 148px;
+    font-size: 2.4rem;
+    line-height: 1.41667;
+    max-width: 100%;
+    text-align: left;
+    margin-left: 19px;
+}
+
 
