--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,5 +1,12 @@
 /* `sm` applies to x-small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) { 
+    .introduction__content__title {
+        font-size: 3.6rem;
+    }
+
+    .introduction__content__desc,.visit__content p,.popular__heading p{
+        font-size: 1.4rem;
+    }
     .introduction__content {
         padding: 0 18px;
     }
@@ -42,11 +49,101 @@
     .menu__list__item-about h4 {
         max-width: 168px;
     }
+
+    .daily-list__item-content-title span:first-child {
+        font-size: 2.2rem;
+    }
+
+    .daily-list__item-content > p {
+        font-size: 1.4rem;
+        max-width: 258px;
+    }
+
+    .daily-list__item-content-title span:last-child {
+        font-size: 2.4rem;
+    }
+
+    .daily-list__item {
+        flex-direction: column;
+        align-items: flex-start;
+        margin-top: 0;
+    }
+
+    .daily-list {
+        height: unset;
+        margin-top: 24px;
+    }
+
+    .daily-list__item-img {
+        width: 100%;
+    }
+
+    .daily-list__item-img img {
+        height: 314px;
+        width: 100%;
+        max-width: 100%;
+        object-fit: cover;
+    }
+
+    .daily-list__item-content {
+        width: 100%;
+    }
+
+    .chef__title h2 {
+        font-size: 3.4rem;
+        line-height: 1.29412; 
+    }
+
+    .chef__title p {
+        line-height: 1.71429; 
+        font-size: 1.4rem;
+    }
+
+    .daily h2,.visit__content h2,.popular__heading h2 ,.blog__title h2{
+        font-size: 3.4rem;
+        line-height: 1.29412;
+    }
+
+    .daily-lunch > span {
+        font-size: 1.6616rem;
+        line-height: 1.32403;
+    }
+
+    .daily-lunch__title-number {
+        font-size: 5rem;
+        line-height: 1;
+    }
+
+    .daily-lunch__title-off {
+        font-size: 1.6rem;
+        line-height: 1.375; 
+    }
+
+    .daily-lunch > p {
+        font-size: 1rem;
+        line-height: 1.6; 
+    }
+
+    .advertisement__item h4 {
+        line-height: 1.41667;
+        font-size: 2.4rem;
+    }
+
+    .blog__content-desc h4 {
+        font-size: 2.4rem;
+        line-height: 1.41667; 
+    }
+
+    .blog__content-desc p {
+        font-size: 1.4rem;
+        line-height: 1.71429;
+    }
+
 }
 
 /* `md` applies to small devices (landscape phones, less than 768px) */
 @media (max-width: 767.98px) { 
-    .reservation__login,.navbar {
+    .table-reservation__login,.navbar {
         display: none;
     }
 
@@ -88,10 +185,6 @@
         font-size: 2.4rem!important;
     }
 
-    .popular__img-item__desc p {
-        font-size: 1.6rem!important;
-    }
-
     .popular__img-item__desc .order__star {
         gap: 6px!important;
     }
@@ -127,6 +220,21 @@
         object-fit: cover;
     }
 
+    .chef__content-item img {
+        max-width: 339px;
+        height: 405px;
+        border: 1px solid rgba(255, 255, 255, 0.50);
+        object-fit: cover;
+    }
+
+    .chef__content-item {
+        text-align: center;
+    }
+
+    .chef__content svg {
+        display: none;
+    }
+
 }
 
 /* `lg` applies to medium devices (tablets, less than 992px) */
@@ -144,6 +252,10 @@
 
     .popular__img-item__desc .order__star {
         gap: 2px;
+    }
+    
+    .reservation__content{
+        padding-left: 20px;
     }
 }
 
@@ -168,9 +280,20 @@
     .visit__thumbnail-item1 img , .visit__thumbnail-item2 img ,.visit__thumbnail-item3 img {
         width: 100%;
     }
+
 }
 
 /* `xxl` applies to x-large devices (large desktops, less than 1400px) */
 @media (max-width: 1399.98px) {
-    
+    .blog__content-desc a {
+        margin-top: 38px;
+    }
+
+    .blog__content-desc h4 {
+        margin-top: 16px;
+    }
+
+    .blog__content-user {
+        margin-top: 28px;
+    }
 }
