--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,3 @@
-/* body {
-    height: 2000px;
-} */
-
 /* Header */
 header {
     background-color: #111114;
@@ -9,7 +5,7 @@ header {
     left: 0;
     right: 0;
     top: 0;
-    z-index: 1;
+    z-index: 99;
 }
 
 .header-navbar {
@@ -31,23 +27,23 @@ header {
     transition: linear 0.3s;
 }
 
-.navbar-item a:hover,.reservation__login:hover {
+.navbar-item a:hover,.table-reservation__login:hover {
     color: #FB8F2C;
 }
 
-.reservation__reserve:hover {
+.table-reservation__reserve:hover {
     color: #FB8F2C;
     border-bottom: 1px solid #FB8F2C;
 }
 
-.reservation__login {
+.table-reservation__login {
     text-decoration: none;
     padding-right: 28px;
     color: rgba(255, 255, 255, 0.80);
     transition: linear 0.3s;
 }
 
-.reservation__reserve {
+.table-reservation__reserve {
     color: #fff;
     text-decoration: none;
     border-bottom: 1px solid #fff;
@@ -530,6 +526,391 @@ main {
 .visit__thumbnail-owl {
     display: none;
 }
+
+/* Container */
+.reservation {
+    background-color: #111114;
+    padding-bottom: 150px;
+}
+
+.reservation__content {
+    background-color: #FB8F2C;
+    padding: 40px 0px 40px 40px;
+    height: 394px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.reservation__content-title h3 {
+    color: #111114;
+    font-size: 4rem;
+    line-height: 1.25; 
+    text-transform: capitalize;
+}
+
+.reservation__content-book a {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    padding: 15px 118px 15px 118px;
+    color: white;
+    background-color: #111114;
+}
+
+.reservation__thumbnail {
+    width: 100%;
+}
+
+.reservation__thumbnail img {
+    width: 100%;
+    height: 394px;
+    object-fit: cover;
+    backdrop-filter: blur(2.5px);
+}
+
+/* Daily */
+.daily {
+    background-color: #111114;
+    padding-bottom: 150px;
+}
+
+.daily h2 {
+    line-height: 1.15625; 
+    font-size: 6.4rem;
+    text-transform: capitalize;
+    color: #fff;
+    text-align: center;
+}
+
+.daily__content {
+    margin-top: 52px;
+}
+
+.daily-lunch {
+    background-image: url(../img/home/Rectangle27.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 434px;
+    padding: 23px 30px;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    justify-content: center;
+    border: 1px solid #FBF8FC;
+}
+
+.daily-lunch > span {
+    font-size: 2.8rem;
+    color: #fff;
+    font-weight: 600;
+    line-height: 1.35714;
+}
+
+.daily-lunch__title {
+    display: flex;
+    align-items: flex-end;
+    margin-top: 8px;
+    gap: 6px;
+}
+
+.daily-lunch__title-number {
+    font-family: 'Playball', cursive;
+    line-height: 0.97619;
+    letter-spacing: -5.04px;
+    text-transform: capitalize;
+    color: #FB8F2C;
+    font-size: 8.4rem;
+}
+
+.daily-lunch__title-off {
+    font-size: 2.6rem;
+    color: #fff;
+    font-weight: 600;
+    line-height: 1.38462; 
+}
+
+.daily-lunch > p {
+    margin-top: 14px;
+    color: #fff;
+    line-height: 1.625;
+    max-width: 254px;
+}
+
+.daily-lunch > a {
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 30px;
+    color: #fff;
+    background-color: rgba(251, 143, 44, 0.80);
+    margin-top: 40px;
+}
+
+.daily-list {
+    height: 434px;
+    margin-top: -36px;
+}
+
+.daily-list__item {
+    display: flex;
+    align-items: center;
+    gap: 28px;
+    margin-top: 36px;
+}
+
+.daily-list__item-img img{
+    max-width: 130px;
+    height: 120px;
+    object-fit: cover;
+}
+
+.daily-list__item-content {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    height: 120px;
+}
+
+.daily-list__item-content-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.daily-list__item-content-title span:first-child {
+    font-weight: 500;
+    line-height: 1.41667;
+    text-transform: capitalize;
+    font-family: 'Libre Bodoni', serif;
+    font-size: 2.4rem;
+    color: #fff;
+}
+
+.daily-list__item-content-title span:last-child {
+    font-family: 'Libre Bodoni', serif;
+    font-size: 3rem;
+    font-weight: 500;
+    line-height: 1.33333;
+    color: #fff;
+}
+
+.daily-list__item-content > p {
+    color: rgba(255, 255, 255, 0.80);
+    line-height: 1.625;
+}
+
+/* advertisement */
+.advertisement {
+    background-color: #FB8F2C;
+    height: 136px;
+    display: flex;
+}
+
+.advertisement__list {
+    display: flex;
+    gap: 60px;
+    white-space: nowrap;
+    overflow-x: auto;
+}
+
+.advertisement__item {
+    display: flex;
+    align-items: center;
+    gap: 18px;
+}
+
+.advertisement__item-img {
+    position: relative;
+}
+
+.advertisement__item-img img {
+    position: absolute;
+    top: 30%;
+    left: 17%;
+}
+
+.advertisement__item h4 {
+    line-height: 1.10526;
+    color: #111114;
+    font-weight: 500;
+    font-size: 3.8rem;
+    width: 218px;
+}
+
+/* Chef */
+.chef {
+    padding: 150px 0;
+    background-color: #111114;
+    position: relative;
+}
+
+.chef__title {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.chef__title h2 {
+    line-height: 1.15625;
+    text-transform: capitalize;
+    color: #fff;
+    font-size: 6.4rem;
+}
+
+.chef__title p {
+    max-width: 768px;
+    line-height: 1.625;
+    margin-top: 16px;
+    color: rgba(255, 255, 255, 0.80);
+}
+
+.chef__content {
+    margin-top: 40px;
+    position: relative;
+}
+
+.chef__content svg {
+    position: absolute;
+    top: -16px;
+    left: -51px;
+}
+
+.chef__content-item {
+    cursor: pointer;
+    transition: linear 0.3s;
+}
+
+
+.chef__content-item img {
+    width: 100%;
+    height: 443px;
+    object-fit: cover;
+    border: 1px solid rgba(255, 255, 255, 0.50);
+    transition: linear 0.3s;
+}
+
+.check__content-about {
+    margin-top: 30px;
+    text-align: center;
+}
+
+.check__content-about h4 {
+    line-height: 1.33333; 
+    font-size: 3rem;
+    color: #fff;
+    transition: linear 0.3s;
+}
+
+.check__content-about span {
+    font-weight: 600;
+    line-height: 1.55556;
+    font-size: 1.8rem;
+    color: #fff;
+    transition: linear 0.3s;
+}
+
+.chef__content-item:hover .check__content-about h4{
+   color: #FB8F2C;
+}
+
+.chef__content-item:hover .check__content-about span{
+   color: #FB8F2C;
+}
+
+/* Blog */
+.blog {
+    background-color: #111114;
+    padding-bottom: 150px;
+}
+
+.blog__title {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.blog__title p {
+    max-width: 768px;
+    line-height: 1.625;
+    font-size: 16px;
+    color: rgba(255, 255, 255, 0.80);
+}
+
+.blog__title h2 {
+    margin-top: 20px;
+    line-height: 1.15625;
+    text-transform: capitalize;
+    color: #fff;
+    font-size: 6.4rem;
+}
+
+.blog__content {
+    margin-top: 60px;
+}
+
+.blog__content-img img {
+    width: 100%;
+    height: 348px;
+    object-fit: cover;
+}
+
+.blog__content-desc {
+    height: 348px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.blog__content-desc span {
+    color: #fff;
+    line-height: 1.625; 
+}
+
+.blog__content-desc h4 {
+    margin-top: 20px;
+    color: #fff;
+    font-size: 3rem;
+    line-height: 1.33333; 
+}
+.blog__content-desc p {
+    margin-top: 20px;
+    font-weight: 600;
+    line-height: 1.55556; 
+    font-size: 1.8rem;
+    color: rgba(255, 255, 255, 0.80);
+}
+
+.blog__content-user {
+    display: flex;
+    gap: 111px;
+    margin-top: 30px;
+}
+
+.blog__content-user__comment,.blog__content-user__views {
+    line-height: 1.625;
+    color: #fff;
+}
+
+.blog__content-desc a {
+    line-height: 26px; /* 162.5% */
+    margin-top: 80px;
+    display: inline-block;
+    padding-bottom: 3px;
+    border-bottom: 1px solid #FB8F2C;
+    text-decoration: none;
+    color: #fff;
+}
+
+.blog__content__top {
+    margin-bottom: 60px;
+}
+
 
 
 
