--- a/assets/css/shopping/cartCSS.css
+++ b/assets/css/shopping/cartCSS.css
@@ -1,3 +1,4 @@
+
 /* Header */
 header {
     background-color: #111114;
@@ -64,143 +65,44 @@ header {
     display: none;
 }
 
-/*main */
-
+/*main*/
 body{
     background-color: #111114;
 }
-.main{
+
+main{
     margin-top: 150px;
-    width: 100%;
+   /* color: rgba(255, 255, 255, 1)*/
 }
-
-/* thẻ p*/
-.all-menu{
-  color: rgba(255, 255, 255, 1);
-  font: 700 40px/50px 'Libre Bodoni', serif;
-  /*width: 50%;*/
+.products-cart li{
+  list-style-type: none;
 }
-
-/*lọc san phẩm*/
-.control{
-  margin-top: 40px;
-  margin-bottom: 80px;
+.products-cart ul{
   display: flex;
-}
-.control button{
-  background-color: #111114;
-  border: none;
-  color: rgba(255, 255, 255,1);
-}
-.control-button{
-  display: inline-block;
-  justify-content: center;
-  margin: 0 30px 0 0;
-  font: 500 30px/40px 'Libre Bodoni', serif;
-}
-
-.control button.active{
-  color: #FB8F2C;
-}
-.control ul{
-  width: 100%;
-}
-.d-flex{
-  margin-left: 10px;
-}
-
-/*thẻ */
-
-.card{
-  background-color: #111114;
   color: rgba(255, 255, 255, 1);
-  border: 1px solid white;
-  margin-bottom: 30px;
-  width: 100%;
 }
-.card h5{
-  height:32px;
-  margin:15px 0 20px 10px;
-  font-size: 30px/40px;
+.products-cart .header-card{
+  padding-bottom: 20px;
+  font: 500 24px/34px 'Libre Bodoni', serif;
 }
-.card button{
-  width: 60%;
+.cart-ul{
+  border-top: 1px solid rgba(255, 255, 255, 1);
+  padding: 20px 0px;
 }
-.card-text{
-  margin-left: none;
-  margin-right: 80px;
+.cart-ul li{
+  margin: auto 0;
 }
-.card button{
-  margin-top: -5px;
+.cart-ul button {
+  padding: 5px 10px ;
 }
-.btn{
-  --bs-btn-padding-x: 1rem;
-  --bs-btn-padding-y: 1rem;
-  --bs-btn-font-weight: 600;
-  --bs-btn-line-height: 30px/40px;
-  font-family: "Plus Jakarta Sans", sans-seril;
-}
-.hide{
-  display: none;
-}
-/*card-space */
-.search-shopping{
-  display: flex;
-  justify-content: right;
-}
-.card-space{
-  margin-left:-40px;
-  
-}
-.card-space img{
-  object-fit: cover;
-  width: 50px;
-  height: 50px;
-}
-.card-space span{
+.main h4{
   color: rgba(255, 255, 255, 1);
-  background-color: red;
-  width: 30px;
-  height: 30px;
-  padding-top: 5px;
-  border-radius: 30px;
   text-align: center;
-  margin-left: -15px;
+  border-top: 1px solid rgba(255, 255, 255, 1);
+  padding: 40px 0  0 0;
+  margin-top: -30px;
+  font: 500 24px/34px 'Libre Bodoni', serif;
 }
-
-/* search */
-.search-space {
-  top:10px;
-  right:50px;
-  position: relative;
-  width: 40px;
-  height: 40px;
-  overflow: hidden;
-  border-radius: 20px;
-  transition: all 0.5s;
-  display: flex;
-}
-.search-space.open{
-  width: 400px;
-}
-.search-space input{
-  width: 100%;
-  height: 100%;
-  padding: 20px 80px 20px 20px;
-  outline: none;
-  font-size: 25px;
-}
-.search-space button{
-  border: none;
-  outline: none;
-  background-color: #111114;
-  top:0;
-  right: 0;
-  position: absolute;
-  width: 40px;
-  height: 40px;
-}
-
 /*footer*/
 footer {
     padding: 150px 0 41px 0;
