--- a/assets/css/shopping/shoppingResponse.css
+++ b/assets/css/shopping/shoppingResponse.css
@@ -347,6 +347,10 @@
   .control{
     text-align: center;
   }
+  .search-shopping{
+    display: flex;
+    justify-content: center;
+  }
 }
 
 /* `xl` applies to large devices (desktops, less than 1200px) */
