--- a/assets/css/contact/contactStyle.css
+++ b/assets/css/contact/contactStyle.css
@@ -142,9 +142,11 @@ header {
 body {
   background-color: #111114;
 }
+.row{
+  margin-top: 120px;
+}
 
 .div-left {
-  margin-top: 170px;
   width: 470px;
 }
 .div-left h1 {
@@ -193,56 +195,106 @@ body {
   margin: 30px 0 30px 50px;
 }
 
-.div-right {
-  height: 425px;
-  width: 570px;
-  color: #ffffff;
-  opacity: 80%;
-  margin-top: 170px;
-  position: relative;
-  margin-left: 60px;
-}
-.div-right p {
-  width: 116px;
-  margin-bottom: 10px;
-}
-.div-right input,
-.div-right textarea {
-  width: 570px;
-  border-top: 0;
-  border-right: 0;
-  border-left: 0;
-  outline: none;
-  background-color: #111114;
-  color: #ffffff;
-}
-.div-right input {
-  height: 56px;
-  margin-bottom: 30px;
-}
-.div-right textarea {
-  height: 159px;
-}
-
-.email,
-.div-right textarea {
-  border-bottom: 1px solid #ffffff;
-}
-.name {
-  border-bottom: 1px solid #ffffff;
-}
-.div-right button {
-  margin-top: 40px;
-  background-color: #fb8f2c;
-  color: #ffffff;
-  padding: 12px 25px;
-  font-weight: 500px;
-}
 .img-location {
   margin: 200px 0 0 60px;
   width: 1170px;
   height: 420px;
 }
+
+.div-right {
+  height: 425px;
+  width: 570px;
+  opacity: 80%;
+  margin-left: 60px;
+  color: #ffffff;
+}
+.div-right p {
+  width: 116px;
+  margin: 10px 0px;
+}
+.div-right input,
+.div-right textarea {
+  width: 100%;
+  border-top: 0 ;
+  border-right: 0;
+  border-left: 0;
+  outline: none;
+  background-color: #111114;
+  color: #ffffff;
+  margin-bottom: 20px;
+}
+.div-right .form_control:nth-child(2){
+  margin-top: 30px;
+}
+.div-right .form-control-textarea{
+  margin-top: 30px;
+}
+.div-right input {
+  height: 36px;
+  margin-bottom: 10px;
+}
+.div-right textarea {
+  height: 130px;
+}
+.email,
+.div-right textarea {
+  border-bottom: 2px solid #ffffff;
+}
+.name {
+  border-bottom: 2px solid #ffffff;
+}
+.div-right button {
+  margin-top: 40px;
+  background-color: #fb8f2c;
+  color: rgba(255, 255, 255, 1);
+  padding: 12px 25px;
+  font-weight: 500;
+}
+/*hiệu ứng chạy khi nhập*/
+.form_control{
+  width: 100%;
+  position: relative;
+}
+.form_control span{
+  position: absolute;
+  border-bottom: 3px solid rgb(22, 176, 242);
+  left: 0;
+  top:60px;
+  width: 0%;
+  transition: 0.3s;
+}
+.div-right input:focus ~ span{
+  width: 100%;
+}
+.form-control-textarea{
+  width: 100%;
+  position: relative;
+}
+.form-control-textarea span{
+  position: absolute;
+  border-bottom: 3px solid rgb(22, 176, 242);
+  left: 0;
+  top:154px;
+  width: 0%;
+  transition: 0.3s;
+}
+.div-right textarea:focus ~ span{
+  width: 100%;
+}
+/*hiệu ứng khi sai*/
+.form_control.error small{
+  color: rgb(237, 13, 13);
+}
+.form_control.error input{
+  border-bottom: 3px solid rgb(237, 13, 13);
+}
+.form-control-textarea.error small{
+  color: rgb(237, 13, 13);
+}
+.form-control-textarea.error textarea{
+  border-bottom: 3px solid rgb(237, 13, 13);
+}
+
 /*footer*/
 footer {
   padding: 150px 0 41px 0;
