--- a/assets/css/menu/menu.css
+++ b/assets/css/menu/menu.css
@@ -180,7 +180,7 @@ img.owl-next,img.owl-prev {
 
 /* banner */
 .Banner {
-    background-image: url(/assets/img/menu/Rectangle\ 26.png);
+    background-image: url(/assets/img/menu/Rectangle26.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
