--- a/assets/css/shopping/shoppingResponse.css
+++ b/assets/css/shopping/shoppingResponse.css
@@ -376,6 +376,9 @@
     display: flex;
     justify-content: center;
   }
+  #myInput{
+    color: rgba(255, 255, 255, 1);
+  }
   .Toast_message{
     top:40px;
   }
